--- a/pom.xml
+++ b/pom.xml
@@ -741,218 +741,6 @@
         </plugins>
     </reporting>
 
-    <profiles>
-        <profile>
-            <id>itest</id>
-            <build>
-                <plugins>
-                    <plugin>
-                        <groupId>org.codehaus.cargo</groupId>
-                        <artifactId>cargo-maven2-plugin</artifactId>
-                        <version>${cargo.version}</version>
-                        <configuration>
-                            <wait>${cargo.wait}</wait>
-                            <container>
-                                <containerId>${cargo.container}</containerId>
-                                <home>${cargo.container.home}</home>
-                                <zipUrlInstaller>
-                                    <url>${cargo.container.url}</url>
-                                    <extractDir>${installDir}</extractDir>
-                                </zipUrlInstaller>
-                            </container>
-                            <configuration>
-                                <home>${project.build.directory}/${cargo.container}/container</home>
-                                <properties>
-                                    <cargo.hostname>${cargo.host}</cargo.hostname>
-                                    <cargo.servlet.port>${cargo.port}</cargo.servlet.port>
-                                    <!-- To prevent conflicts with already running instances -->
-                                    <cargo.tomcat.ajp.port>8123</cargo.tomcat.ajp.port>
-                                </properties>
-                            </configuration>
-                        </configuration>
-                        <executions>
-                            <execution>
-                                <id>start-container</id>
-                                <phase>pre-integration-test</phase>
-                                <goals>
-                                    <goal>start</goal>
-                                </goals>
-                            </execution>
-                            <execution>
-                                <id>stop-container</id>
-                                <phase>post-integration-test</phase>
-                                <goals>
-                                    <goal>stop</goal>
-                                </goals>
-                            </execution>
-                        </executions>
-                    </plugin>
-                    <plugin>
-                        <groupId>org.codehaus.mojo</groupId>
-                        <artifactId>webtest-maven-plugin</artifactId>
-                        <version>1.0.0</version>
-                        <executions>
-                            <execution>
-                                <id>webtest-test</id>
-                                <phase>integration-test</phase>
-                                <goals>
-                                    <goal>test</goal>
-                                </goals>
-                            </execution>
-                            <execution>
-                                <id>webtest-verify</id>
-                                <phase>verify</phase>
-                                <goals>
-                                    <goal>verify-result</goal>
-                                </goals>
-                            </execution>
-                            <execution>
-                                <id>webtest-report-html</id>
-                                <phase>post-integration-test</phase>
-                                <goals>
-                                    <goal>report</goal>
-                                </goals>
-                            </execution>
-                        </executions>
-                        <configuration>
-                            <host>${cargo.host}</host>
-                            <port>${cargo.port}</port>
-                            <sourcedirectory>src/test/resources</sourcedirectory>
-                            <sourcefile>web-tests.xml</sourcefile>
-                            <target>${webtest.target}</target>
-                            <basepath>${project.build.finalName}</basepath>
-                            <resultpath>target/webtest/webtest-results</resultpath>
-                            <haltonfailure>false</haltonfailure>
-                            <haltonerror>false</haltonerror>
-                            <loglevel>fatal</loglevel>
-                        </configuration>
-                    </plugin>
-                </plugins>
-            </build>
-        </profile>
-
-        <!-- ================= Production Settings Profile ================= -->
-        <!-- Use "-P prod" when you want to use the settings in this profile -->
-        <!-- =============================================================== -->
-        <profile>
-            <id>prod</id>
-            <build>
-                <plugins>
-                    <!-- Override location of data file for DbUnit to load (doesn't have 
-                        negative keys) -->
-                    <plugin>
-                        <groupId>org.codehaus.mojo</groupId>
-                        <artifactId>dbunit-maven-plugin</artifactId>
-                        <configuration>
-                            <src>src/main/resources/default-data.xml</src>
-                        </configuration>
-                    </plugin>
-                </plugins>
-            </build>
-        </profile>
-
-        <!-- ================= Database Profiles ================= -->
-        <profile>
-            <id>derby</id>
-            <properties>
-                <hibernate.dialect>org.hibernate.dialect.DerbyTenSevenDialect</hibernate.dialect>
-                <jdbc.groupId>org.apache.derby</jdbc.groupId>
-                <jdbc.artifactId>derbyclient</jdbc.artifactId>
-                <jdbc.version>10.9.1.0</jdbc.version>
-                <jdbc.driverClassName>org.apache.derby.jdbc.ClientDriver</jdbc.driverClassName>
-                <jdbc.url>jdbc:derby://localhost/${db.name};create=true</jdbc.url>
-                <jdbc.username>any</jdbc.username>
-                <jdbc.password>value</jdbc.password>
-                <jdbc.validationQuery>SELECT 1 + 1</jdbc.validationQuery>
-            </properties>
-        </profile>
-        <profile>
-            <id>h2</id>
-            <properties>
-                <dbunit.dataTypeFactoryName>org.dbunit.ext.h2.H2DataTypeFactory</dbunit.dataTypeFactoryName>
-                <hibernate.dialect>org.hibernate.dialect.H2Dialect</hibernate.dialect>
-                <jdbc.groupId>com.h2database</jdbc.groupId>
-                <jdbc.artifactId>h2</jdbc.artifactId>
-                <jdbc.version>1.3.170</jdbc.version>
-                <jdbc.driverClassName>org.h2.Driver</jdbc.driverClassName>
-                <jdbc.url>jdbc:h2:/tmp/${db.name};MVCC=TRUE</jdbc.url>
-                <jdbc.username>sa</jdbc.username>
-                <jdbc.validationQuery>SELECT 1 + 1</jdbc.validationQuery>
-            </properties>
-        </profile>
-        <profile>
-            <id>hsqldb</id>
-            <properties>
-                <dbunit.dataTypeFactoryName>org.dbunit.ext.hsqldb.HsqldbDataTypeFactory</dbunit.dataTypeFactoryName>
-                <hibernate.dialect>org.hibernate.dialect.HSQLDialect</hibernate.dialect>
-                <jdbc.groupId>org.hsqldb</jdbc.groupId>
-                <jdbc.artifactId>hsqldb</jdbc.artifactId>
-                <jdbc.version>2.2.9</jdbc.version>
-                <jdbc.driverClassName>org.hsqldb.jdbcDriver</jdbc.driverClassName>
-                <jdbc.url>jdbc:hsqldb:/tmp/${db.name};shutdown=true</jdbc.url>
-                <jdbc.username>sa</jdbc.username>
-                <jdbc.validationQuery>SELECT 1 + 1</jdbc.validationQuery>
-            </properties>
-        </profile>
-        <profile>
-            <id>oracle</id>
-            <properties>
-                <dbunit.dataTypeFactoryName>org.dbunit.ext.oracle.OracleDataTypeFactory</dbunit.dataTypeFactoryName>
-                <dbunit.schema>SYSTEM</dbunit.schema> <!-- Make sure to capitalize the schema name -->
-                <hibernate.dialect>org.hibernate.dialect.Oracle9Dialect</hibernate.dialect>
-                <jdbc.groupId>com.oracle</jdbc.groupId>
-                <jdbc.artifactId>ojdbc14</jdbc.artifactId>
-                <jdbc.version>10.2.0.2.0</jdbc.version>
-                <jdbc.driverClassName>oracle.jdbc.OracleDriver</jdbc.driverClassName>
-                <jdbc.url>jdbc:oracle:thin:@localhost:1521:XE</jdbc.url>
-                <jdbc.username>system</jdbc.username>
-                <jdbc.password>system</jdbc.password>
-                <jdbc.validationQuery>SELECT 1 + 1 from DUAL</jdbc.validationQuery>
-            </properties>
-        </profile>
-        <profile>
-            <id>postgresql</id>
-            <properties>
-                <hibernate.dialect>org.hibernate.dialect.PostgreSQLDialect</hibernate.dialect>
-                <jdbc.groupId>postgresql</jdbc.groupId>
-                <jdbc.artifactId>postgresql</jdbc.artifactId>
-                <jdbc.version>9.1-901-1.jdbc4</jdbc.version>
-                <jdbc.driverClassName>org.postgresql.Driver</jdbc.driverClassName>
-                <jdbc.url>jdbc:postgresql://localhost/${db.name}</jdbc.url>
-                <jdbc.username>postgres</jdbc.username>
-                <jdbc.password>postgres</jdbc.password>
-                <jdbc.validationQuery>SELECT 1 + 1</jdbc.validationQuery>
-            </properties>
-        </profile>
-        <profile>
-            <!-- You need to enable TCP/IP Connections for SQL Server 2005 after installing. -->
-            <!-- http://www.mattwoodward.com/blog/index.cfm?commentID=211 -->
-            <id>sqlserver</id>
-            <properties>
-                <dbunit.dataTypeFactoryName>org.dbunit.ext.mssql.MsSqlDataTypeFactory</dbunit.dataTypeFactoryName>
-                <dbunit.operation.type>MSSQL_CLEAN_INSERT</dbunit.operation.type>
-                <hibernate.dialect>org.hibernate.dialect.SQLServerDialect</hibernate.dialect>
-                <jdbc.groupId>net.sourceforge.jtds</jdbc.groupId>
-                <jdbc.artifactId>jtds</jdbc.artifactId>
-                <jdbc.version>1.3.0</jdbc.version>
-                <jdbc.driverClassName>net.sourceforge.jtds.jdbc.Driver</jdbc.driverClassName>
-                <jdbc.url>jdbc:jtds:sqlserver://localhost:3683/${db.name}</jdbc.url>
-                <jdbc.username>sa</jdbc.username>
-                <jdbc.password>appfuse</jdbc.password>
-                <jdbc.validationQuery>SELECT 1 + 1</jdbc.validationQuery>
-            </properties>
-        </profile>
-
-        <!-- ================= Container Profiles ================= -->
-        <profile>
-            <id>jboss</id>
-            <properties>
-                <cargo.container>jboss4x</cargo.container>
-                <cargo.container.home>${env.JBOSS_HOME}</cargo.container.home>
-                <cargo.container.url>http://easynews.dl.sourceforge.net/sourceforge/jboss/jboss-4.0.5.GA.zip</cargo.container.url>
-            </properties>
-        </profile>
-    </profiles>
 
     <properties>
         <!-- Application settings -->
@@ -1001,9 +789,9 @@
         <jdbc.artifactId>mysql-connector-java</jdbc.artifactId>
         <jdbc.version>5.1.27</jdbc.version>
         <jdbc.driverClassName>com.mysql.jdbc.Driver</jdbc.driverClassName>
-        <jdbc.url>jdbc:mysql://localhost/${db.name}?createDatabaseIfNotExist=true&amp;amp;useUnicode=true&amp;amp;characterEncoding=utf-8&amp;amp;autoReconnect=true</jdbc.url>
-        <jdbc.username>root</jdbc.username>
-        <jdbc.password>root</jdbc.password>
+        <jdbc.url>jdbc:mysql://104.148.70.17/${db.name}?createDatabaseIfNotExist=true&amp;amp;useUnicode=true&amp;amp;characterEncoding=utf-8&amp;amp;autoReconnect=true</jdbc.url>
+        <jdbc.username>ken</jdbc.username>
+        <jdbc.password>ken123</jdbc.password>
 
         <!-- Properties calculated by AppFuse when running full-source plugin -->
         <aspectj.version>1.7.4</aspectj.version>
