--- a/src/main/resources/hibernate.properties
+++ b/src/main/resources/hibernate.properties
@@ -8,6 +8,6 @@
 # hibernate.search.lucene_version=LUCENE_35
 # hibernate.search.analyzer=org.apache.lucene.analysis.en.EnglishAnalyzer
 # hibernate.search.worker.batch_size=100
-hibernate.format_sql=true
-hibernate.show_sql=true
+hibernate.format_sql=false
+hibernate.show_sql=false
 hibernate.connection.autocommit=false
