--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -1,8 +1,8 @@
-jdbc.driverClassName=${jdbc.driverClassName}
-jdbc.url=${jdbc.url}
-jdbc.username=${jdbc.username}
-jdbc.password=${jdbc.password}
-jdbc.validationQuery=${jdbc.validationQuery}
+# jdbc.driverClassName=${jdbc.driverClassName}
+# jdbc.url=${jdbc.url}
+# jdbc.username=${jdbc.username}
+# jdbc.password=${jdbc.password}
+# jdbc.validationQuery=${jdbc.validationQuery}
 
 hibernate.dialect=${hibernate.dialect}
 
